--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,6 +10,7 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+/* HEADER  */
 header {
   background-color: #4f7cac;
   height: 60px;
@@ -73,6 +74,7 @@ header {
   height: 305px !important;
 }
 
+/* BODY MAIN CONTAINER GLOBALS*/
 .container {
   justify-content: center;
   padding-top: 80px;
@@ -109,10 +111,13 @@ header {
   font-size: 36px;
 }
 
-.container p {
+p {
   font-weight: 100;
   color: #ece5f0;
   font-size: 20px;
+}
+
+.container p {
   width: 600px;
 }
 
@@ -125,6 +130,115 @@ header {
   margin-right: 50px;
 }
 
+/* CURRICULUM VITAE */
+.body-curriculum {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.body-curriculum img {
+  margin-top: 20px;
+  width: 20em;
+}
+
+.body-curriculum h3 {
+  margin-top: 15px;
+  font-size: 1.4em;
+}
+
+/* SERVICES */
+.container-services {
+  padding-top: 80px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.container-services h1 {
+  display: flex;
+  justify-content: center;
+}
+
+.container-services .wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.container-services .card {
+  width: 25em;
+  height: 30em;
+  background: #4f7cac;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  box-shadow: 10px 10px 5px 0px rgba(4, 6, 36, 0.63);
+  transition: 0.2s;
+  border-radius: 35px 0px 35px 0px;
+  cursor: pointer;
+  margin-right: 40px;
+  margin: 20px;
+}
+
+.card-image {
+  display: flex;
+  justify-content: center;
+}
+
+.card-image img {
+  width: 8em;
+  flex-shrink: 2;
+}
+
+.card h2 {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  text-shadow: none;
+}
+
+.card p {
+  font-size: 1.2em;
+  padding-top: 10px;
+  font-weight: 300;
+}
+
+.card-footer {
+  display: flex;
+  padding-top: 30px;
+  justify-content: center;
+}
+
+.card-footer a {
+  color: #ece5f0;
+  text-decoration: none;
+  font-size: 1.5em;
+  background: #0b233d;
+  padding: 8px;
+  border-radius: 10px;
+  transition: 0.2s;
+}
+
+.card-footer a:hover {
+  background: #011124;
+  box-shadow: 5px 5px #031224;
+}
+
+/* RESPONSIVE */
+@media (min-width: 1024px) {
+  .container {
+    padding-top: 50px;
+  }
+  .container-services {
+    padding-top: 50px;
+  }
+  .container-services .card {
+    width: 25em;
+    height: 25em;
+  }
+}
 @media screen and (max-width: 859px) {
   .menu-toggle {
     display: block;
@@ -204,6 +318,15 @@ header {
   .redes-danielmorales img {
     width: 90px;
   }
+
+  .container-services .wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .container-services .card {
+    width: 20em;
+  }
 }
 
 @media screen and (max-width: 350px) {
@@ -223,6 +346,10 @@ header {
 
   .informacion-danielmorales p {
     width: 290px;
+  }
+
+  .body-curriculum img {
+    width: 15em;
   }
 }
 
