--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -111,14 +111,13 @@ header {
   font-size: 36px;
 }
 
+.container p {
+  width: 600px;
+}
 p {
   font-weight: 100;
   color: #ece5f0;
   font-size: 20px;
-}
-
-.container p {
-  width: 600px;
 }
 
 .redes-danielmorales {
@@ -249,6 +248,7 @@ p {
     position: absolute;
     top: 60px;
     left: 0;
+    z-index: 100;
     width: 100%;
     height: 0;
     overflow: hidden;
