--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -1,82 +1,23 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="keywords"
-      content="Desarrollo web, paginas web, backend, frontend, desarrollo de software, proyectos tecnologicos"
-    />
-    <meta
-      name="description"
-      content="Soy desarrollador de software/web autodidacta, especializado en backend y con buenos conocimientos en fronted."
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="INDEX, FOLLOW" />
-    <title>Daniel Morales - Desarrollo Web y soluciones a la medida</title>
-  </head>
-  <body>
-    <div>
-      <header>
-        <nav>
-          <ul>
-            <li>
-              <a href="../index.html">Home</a>
-            </li>
-            <li>
-              <a href="./aboutme.html">Acerca de mi</a>
-            </li>
-            <li>
-              <a href="./services.html">Servicios</a>
-            </li>
-            <li>
-              <a href="./curriculum.html">Curriculum</a>
-            </li>
-            <li>
-              <a href="./portfolio.html">Portafolio</a>
-            </li>
-            <li>
-              <a href="./contact.html">Contacto</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-    </div>
-    <div>
-      <img
-        src="../assets/img/desarrolloweb.svg"
-        alt="Desarrollo web - Aplicaciones web a tu medida"
-      />
-    </div>
-    <div>
-      <h1>Portafolio</h1>
-
-      <div>
-        <h3>GeekyShop</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          quae officia inventore quas quaerat modi libero eum consequuntur
-          incidunt perferendis, nam sed nihil velit quidem animi nulla?
-          Molestias, deleniti iure?
-        </p>
-      </div>
-      <div>
-        <h3>Microaliados Alqueria - Gestion de inventarios</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nisi
-          architecto quaerat nam ab? Nemo laudantium, cumque dignissimos
-          voluptatibus architecto dolore veniam aliquam sit odit impedit
-          doloremque, assumenda, accusantium fugit.
-        </p>
-      </div>
-      <div>
-        <h3>BM Software - Landing Page</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nisi
-          architecto quaerat nam ab? Nemo laudantium, cumque dignissimos
-          voluptatibus architecto dolore veniam aliquam sit odit impedit
-          doloremque, assumenda, accusantium fugit.
-        </p>
+<div class="container-portfolio animate__animated animate__backInDown">
+  <h1 class="titulo-h1">Portafolio</h1>
+  <div class="wrapper">
+    <div class="slider">
+      <div class="project">
+        <div class="project-info">
+          <img
+            src="../assets/img/geekyshop.png"
+            alt="Geeky Shop - tienda virtual"
+          />
+          <h2 class="titulo-h2">Geekyshop</h2>
+          <p>
+            Tienda virtual basada en steam, la cual permite gestionar tus
+            productos, usuarios y empleados.
+          </p>
+        </div>
+        <div class="project-footer">
+          <p>Tecnología: MEAN (Mongo, Express, Angular, NodeJs)</p>
+        </div>
       </div>
     </div>
-  </body>
-</html>
+  </div>
+</div>
