--- a/src/views/curriculum.html
+++ b/src/views/curriculum.html
@@ -1,7 +1,7 @@
 <div class="container animate__animated animate__backInDown">
   <div class="body-curriculum">
     <h1 class="titulo-h1">Curriculum</h1>
-    <a href="../assets/docs/HV_DM.pdf" download>
+    <a href="assets/docs/HV_DM.pdf" download>
       <img
         src="../assets/img/curriculum.svg"
         alt="Curriculum, hoja de vida Daniel Morales"
