--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+
 }
 
 .container-services h1 {
@@ -13,23 +14,23 @@
 
 .container-services .wrapper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
 .container-services .card {
-    width: 25em;
-    height: 30em;
-    background: #4f7cac;
-    padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    align-items: center;
+    margin-right: 40px;
+    justify-content: space-between;
+    margin-top: 40px;
+    background: #4f7cac;
+    padding: 20px;
     box-shadow: 10px 10px 5px 0px rgba(4, 6, 36, 0.63);
     transition: 0.2s;
     border-radius: 35px 0px 35px 0px;
     cursor: pointer;
-    margin-right: 40px;
-    margin: 20px;
 }
 
 .card-image {
@@ -39,7 +40,6 @@
 
 .card-image img {
     width: 8em;
-    flex-shrink: 2;
 }
 
 .card h2 {
