--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -11,7 +11,7 @@
     justify-content: center;
 }
 
-.wrapper {
+.container-skills .wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
