Bug justify content css

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -250,6 +250,7 @@ p {
   .container-services .card {
     width: 20em;
     margin-right: 0;
+    justify-content: normal;
   }
 
   .container-services .wrapper {
