--- a/main.css
+++ b/main.css
@@ -19,11 +19,7 @@
 }
 
 .container-services .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin-right: 40px;
-    justify-content: space-between;
     flex-shrink: 2;
     margin-top: 40px;
     background: #4f7cac;
@@ -83,6 +79,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 .body-curriculum img {
