--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -19,11 +19,8 @@
 }
 
 .container-services .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin-right: 40px;
-    justify-content: space-between;
+    flex-shrink: 2;
     margin-top: 40px;
     background: #4f7cac;
     padding: 20px;
@@ -40,6 +37,7 @@
 
 .card-image img {
     width: 8em;
+    flex-shrink: 2;
 }
 
 .card h2 {
