--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -201,7 +201,8 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding-top: 50px;
+    padding-left: 0px;
   }
 
   .img-danielmorales {
@@ -245,7 +246,9 @@ p {
     width: 90px;
   }
 
-
+  .container-services {
+    padding-top: 50px;
+  }
 
   .container-services .card {
     width: 20em;
@@ -255,6 +258,10 @@ p {
 
   .container-services .wrapper {
     margin-bottom: 20px;
+  }
+
+  .container-skills {
+    padding-top: 50px
   }
 
 }
