--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -18,6 +18,22 @@
           <p>Tecnología: MEAN (Mongo, Express, Angular, NodeJs)</p>
         </div>
       </div>
+      <div class="project">
+        <div class="project-info">
+          <img
+            src="../assets/img/geekyshop.png"
+            alt="Geeky Shop - tienda virtual"
+          />
+          <h2 class="titulo-h2">Geekyshop</h2>
+          <p>
+            Tienda virtual basada en steam, la cual permite gestionar tus
+            productos, usuarios y empleados.
+          </p>
+        </div>
+        <div class="project-footer">
+          <p>Tecnología: MEAN (Mongo, Express, Angular, NodeJs)</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
