Terminado contacto, añadido hover en portafolio. agregado scrips en package.json

--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -6,8 +6,9 @@
 .container-portfolio .wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    align-items: center;
     margin-bottom: 20px;
+    flex-direction: column;
 }
 
 .container-portfolio .wrapper .project {
@@ -19,6 +20,10 @@
     padding: 10px 20px;
     border-top: 10px solid #081e35;
     border-radius: 10px;
+    position: relative;
+    cursor: pointer;
+    transition: all 500ms ease-out;
+    overflow: hidden;
 }
 
 .project-info {
@@ -49,4 +54,34 @@
     text-align: center;
     font-size: 16px;
     font-weight: bold;
+}
+
+.project-capa {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(32, 95, 116, 0.795);
+    transition: all 500ms ease-out;
+    opacity: 0;
+    visibility: hidden;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-capa p {
+    font-size: 200px;
+}
+
+.project-capa a {
+    text-decoration: none;
+    color: #ece5f0;
+}
+
+.project:hover>.project-capa {
+    opacity: 1;
+    visibility: visible;
 }
