--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -1,82 +1,17 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="keywords"
-      content="Desarrollo web, paginas web, backend, frontend, desarrollo de software, proyectos tecnologicos"
-    />
-    <meta
-      name="description"
-      content="Soy desarrollador de software/web autodidacta, especializado en backend y con buenos conocimientos en fronted."
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="INDEX, FOLLOW" />
-    <title>Daniel Morales - Desarrollo Web y soluciones a la medida</title>
-  </head>
-  <body>
-    <div>
-      <header>
-        <nav>
-          <ul>
-            <li>
-              <a href="../index.html">Home</a>
-            </li>
-            <li>
-              <a href="./aboutme.html">Acerca de mi</a>
-            </li>
-            <li>
-              <a href="./services.html">Servicios</a>
-            </li>
-            <li>
-              <a href="./curriculum.html">Curriculum</a>
-            </li>
-            <li>
-              <a href="./portfolio.html">Portafolio</a>
-            </li>
-            <li>
-              <a href="./contact.html">Contacto</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-    </div>
-    <div>
-      <img
-        src="../assets/img/desarrolloweb.svg"
-        alt="Desarrollo web - Aplicaciones web a tu medida"
-      />
-    </div>
-    <div>
-      <h1>Contacto</h1>
-      <h3>Email</h3>
-      <p>mralejo99@gmail.com</p>
-      <p>
-        <b>Linkedin:</b>
-        <a
-          href="https://www.linkedin.com/in/daniel-morales-sevillano/"
-          target="_BLANK"
-          >Daniel Morales</a
-        >
-      </p>
-      <p>
-        <b>GitHub: </b
-        ><a href="https://github.com/Se1juro" target="_BLANK">Daniel Morales</a>
-      </p>
-      <div>
-        <form>
-          <input type="text" name="nombre" required />
-          <input type="text" name="asunto" required />
-          <input type="email" name="email" required />
-          <textarea
-            name="mensaje"
-            id="mensaje"
-            cols="30"
-            rows="10"
-            required
-          ></textarea>
-        </form>
-      </div>
-    </div>
-  </body>
-</html>
+<div class="container-contact animate__animated animate__backInDown">
+  <h1 class="titulo-h1">Contacto</h1>
+  <div class="contact-info">
+    <p>
+      <i class="fas fa-envelope"></i>
+      <a href="mailto:mralejo99@gmail.com">mralejo99@gmail.com</a>
+    </p>
+    <p>
+      <i class="fas fa-phone"></i>
+      <a href="tel:+573146061942">+57 314 6061942</a>
+    </p>
+    <p>
+      <i class="fab fa-instagram"></i>
+      <a href="https://www.instagram.com/danielm071">danielm071</a>
+    </p>
+  </div>
+</div>
