--- a/src/views/notfound.html
+++ b/src/views/notfound.html
@@ -1,3 +1,4 @@
-<div class="container animate__animated animate__zoomInDown">
-  <h1 class="titulo-h1">404 Not Found</h1>
+<div class="container-404 animate__animated animate__zoomInDown">
+  <h1 class="titulo-h1">Ups... algo pasó aquí 😥</h1>
+  <img src="../assets/img/undraw_warning_cyit.svg" alt="Pagina no encontrada" />
 </div>
