--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -1,38 +1,80 @@
 <div class="container-portfolio animate__animated animate__backInDown">
   <h1 class="titulo-h1">Portafolio</h1>
   <div class="wrapper">
-    <div class="slider">
-      <div class="project">
-        <div class="project-info">
-          <img
-            src="../assets/img/geekyshop.png"
-            alt="Geeky Shop - tienda virtual"
-          />
-          <h2 class="titulo-h2">Geekyshop</h2>
-          <p>
-            Tienda virtual basada en steam, la cual permite gestionar tus
-            productos, usuarios y empleados.
-          </p>
-        </div>
-        <div class="project-footer">
-          <p>Tecnología: MEAN (Mongo, Express, Angular, NodeJs)</p>
-        </div>
+    <div class="project">
+      <div class="project-info">
+        <img
+          src="../assets/img/geekyshop.png"
+          alt="Geeky Shop - tienda virtual"
+        />
+        <h2 class="titulo-h2">Geekyshop</h2>
+        <p>
+          Tienda virtual basada en steam, la cual permite gestionar tus
+          productos, usuarios y empleados.
+        </p>
       </div>
-      <div class="project">
-        <div class="project-info">
-          <img
-            src="../assets/img/geekyshop.png"
-            alt="Geeky Shop - tienda virtual"
-          />
-          <h2 class="titulo-h2">Geekyshop</h2>
-          <p>
-            Tienda virtual basada en steam, la cual permite gestionar tus
-            productos, usuarios y empleados.
-          </p>
-        </div>
-        <div class="project-footer">
-          <p>Tecnología: MEAN (Mongo, Express, Angular, NodeJs)</p>
-        </div>
+      <div class="project-footer">
+        <p>Tecnología: MEAN (Mongo, Express, Angular, NodeJs)</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a
+            href="https://github.com/Se1juro/GeekyShop-Stack-Mean"
+            target="_BLANK"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://geekyshop.herokuapp.com/home" target="_BLANK"
+            ><i class="fas fa-eye"></i
+          ></a>
+        </p>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project-info">
+        <img
+          src="../assets/img/microaliados.png"
+          alt="Geeky Shop - tienda virtual"
+        />
+        <h2 class="titulo-h2">Microaliados Gestion de inventarios</h2>
+        <p>
+          Aplicacion web desarrollada para la gestion de inventarios y
+          distribucion de los microaliados regionales de Alqueria.
+        </p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: MERN (Mongo, Express, React, NodeJs)</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a
+            href="https://github.com/Se1juro/microaliadosalqueria"
+            target="_BLANK"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="microaliados.herokuapp.com/" target="_BLANK"
+            ><i class="fas fa-eye"></i
+          ></a>
+        </p>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project-info">
+        <img
+          src="../assets/img/bmsoftware.png"
+          alt="Geeky Shop - tienda virtual"
+        />
+        <h2 class="titulo-h2">BM Software Landing Page</h2>
+        <p>Landing page para la empresa en la que laboro</p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: Primefaces</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a href="https://bmsoftware.co/" target="_BLANK"
+            ><i class="fas fa-eye"></i
+          ></a>
+        </p>
       </div>
     </div>
   </div>
