--- a/src/views/services.html
+++ b/src/views/services.html
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="card">
-      <div class="info">
+      <div class="card-info">
         <div class="card-image">
           <img src="../assets/img/function.svg" alt="Diseño de paginas web" />
         </div>
