Actualizado el portafolio

--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -77,5 +77,44 @@
         </p>
       </div>
     </div>
+    <div class="project">
+      <div class="project-info">
+        <img
+          src="../assets/img/basetool.png"
+          alt="Geeky Shop - tienda virtual"
+        />
+        <h2 class="titulo-h2">BaseTool</h2>
+        <p>
+          Herramienta que permite generar componentes, modulos y proyectos base
+          apartir de plantillas de codigo estandar
+        </p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: Java SE 8, JavaFX</p>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project-info">
+        <img
+          src="../assets/img/convertExcelToCsv.png"
+          alt="Geeky Shop - tienda virtual"
+        />
+        <h2 class="titulo-h2">Convert Excel to CSV APP</h2>
+        <p>
+          Herramienta que permite generar archivo CSV apartir de un Excel para
+          cargue de historias de usuarios y tareas a la aplicacion Yodiz
+        </p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: Java SE 8, JavaFX</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a href="https://github.com/Se1juro/convertExceltoCsv" target="_BLANK"
+            ><i class="fab fa-github"></i
+          ></a>
+        </p>
+      </div>
+    </div>
   </div>
 </div>
