Nueva imagen para mini instagram

--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -119,7 +119,7 @@
     <div class="project">
       <div class="project-info">
         <img
-          src="../assets/img/microaliados.png"
+          src="../assets/img/miniinstagram.jpg"
           alt="Geeky Shop - tienda virtual"
         />
         <h2 class="titulo-h2">Mini Instagram Uploader</h2>
