Modificaciones en algunos textos

--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -3,10 +3,7 @@
   <div class="wrapper">
     <div class="project">
       <div class="project-info">
-        <img
-          src="../assets/img/geekyshop.png"
-          alt="Geeky Shop - tienda virtual"
-        />
+        <img src="../assets/img/geekyshop.png" alt="Geeky Shop - tienda virtual" />
         <h2 class="titulo-h2">Geekyshop</h2>
         <p>
           Tienda virtual basada en steam, la cual permite gestionar tus
@@ -18,27 +15,18 @@
       </div>
       <div class="project-capa">
         <p>
-          <a
-            href="https://github.com/Se1juro/GeekyShop-Stack-Mean"
-            target="_BLANK"
-            ><i class="fab fa-github"></i
-          ></a>
-          <a href="https://geekyshop.herokuapp.com/home" target="_BLANK"
-            ><i class="fas fa-eye"></i
-          ></a>
+          <a href="https://github.com/Se1juro/GeekyShop-Stack-Mean" target="_BLANK"><i class="fab fa-github"></i></a>
+          <a href="https://geekyshop.herokuapp.com/home" target="_BLANK"><i class="fas fa-eye"></i></a>
         </p>
       </div>
     </div>
     <div class="project">
       <div class="project-info">
-        <img
-          src="../assets/img/microaliados.png"
-          alt="Geeky Shop - tienda virtual"
-        />
+        <img src="../assets/img/microaliados.png" alt="Geeky Shop - tienda virtual" />
         <h2 class="titulo-h2">Microaliados Gestion de inventarios</h2>
         <p>
           Aplicacion web desarrollada para la gestion de inventarios y
-          distribucion de los microaliados regionales de Alqueria.
+          distribucion de los microaliados regionales.
         </p>
       </div>
       <div class="project-footer">
@@ -46,23 +34,14 @@
       </div>
       <div class="project-capa">
         <p>
-          <a
-            href="https://github.com/Se1juro/microaliadosalqueria"
-            target="_BLANK"
-            ><i class="fab fa-github"></i
-          ></a>
-          <a href="https://microaliados.herokuapp.com/" target="_BLANK"
-            ><i class="fas fa-eye"></i
-          ></a>
+          <a href="https://github.com/Se1juro/microaliadosalqueria" target="_BLANK"><i class="fab fa-github"></i></a>
+          <a href="https://microaliados.herokuapp.com/" target="_BLANK"><i class="fas fa-eye"></i></a>
         </p>
       </div>
     </div>
     <div class="project">
       <div class="project-info">
-        <img
-          src="../assets/img/bmsoftware.png"
-          alt="Geeky Shop - tienda virtual"
-        />
+        <img src="../assets/img/bmsoftware.png" alt="Geeky Shop - tienda virtual" />
         <h2 class="titulo-h2">BM Software Landing Page</h2>
         <p>Landing page para la empresa en la que laboro</p>
       </div>
@@ -71,18 +50,13 @@
       </div>
       <div class="project-capa">
         <p>
-          <a href="https://bmsoftware.co/" target="_BLANK"
-            ><i class="fas fa-eye"></i
-          ></a>
+          <a href="https://bmsoftware.co/" target="_BLANK"><i class="fas fa-eye"></i></a>
         </p>
       </div>
     </div>
     <div class="project">
       <div class="project-info">
-        <img
-          src="../assets/img/basetool.png"
-          alt="Geeky Shop - tienda virtual"
-        />
+        <img src="../assets/img/basetool.png" alt="Geeky Shop - tienda virtual" />
         <h2 class="titulo-h2">BaseTool</h2>
         <p>
           Herramienta que permite generar componentes, modulos y proyectos base
@@ -95,10 +69,7 @@
     </div>
     <div class="project">
       <div class="project-info">
-        <img
-          src="../assets/img/convertExcelToCsv.png"
-          alt="Geeky Shop - tienda virtual"
-        />
+        <img src="../assets/img/convertExcelToCsv.png" alt="Geeky Shop - tienda virtual" />
         <h2 class="titulo-h2">Convert Excel to CSV APP</h2>
         <p>
           Herramienta que permite generar archivo CSV apartir de un Excel para
@@ -110,18 +81,13 @@
       </div>
       <div class="project-capa">
         <p>
-          <a href="https://github.com/Se1juro/convertExceltoCsv" target="_BLANK"
-            ><i class="fab fa-github"></i
-          ></a>
+          <a href="https://github.com/Se1juro/convertExceltoCsv" target="_BLANK"><i class="fab fa-github"></i></a>
         </p>
       </div>
     </div>
     <div class="project">
       <div class="project-info">
-        <img
-          src="../assets/img/miniinstagram.jpg"
-          alt="Geeky Shop - tienda virtual"
-        />
+        <img src="../assets/img/miniinstagram.jpeg" alt="Geeky Shop - tienda virtual" />
         <h2 class="titulo-h2">Mini Instagram Uploader</h2>
         <p>
           Aplicacion web desarrollada en PHP 7 que clona la interfaz de
@@ -133,14 +99,8 @@
       </div>
       <div class="project-capa">
         <p>
-          <a href="https://github.com/Se1juro/miniInstagramphp" target="_BLANK"
-            ><i class="fab fa-github"></i
-          ></a>
-          <a
-            href="https://warm-refuge-15386.herokuapp.com/index.php"
-            target="_BLANK"
-            ><i class="fas fa-eye"></i
-          ></a>
+          <a href="https://github.com/Se1juro/miniInstagramphp" target="_BLANK"><i class="fab fa-github"></i></a>
+          <a href="https://warm-refuge-15386.herokuapp.com/index.php" target="_BLANK"><i class="fas fa-eye"></i></a>
         </p>
       </div>
     </div>
