--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -104,5 +104,24 @@
         </p>
       </div>
     </div>
+    <div class="project">
+      <div class="project-info">
+        <img src="../assets/img/GestionApp.png" alt="Gestion App - K Agencia" />
+        <h2 class="titulo-h2">Gestion de proyectos y actividades</h2>
+        <p>
+          Aplicacion web que automatiza la gestion de proyectos, actividades, ajustes y todo los relacionado con el
+          trabajo en la empresa
+        </p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: NodeJs, MongoDb, React</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a href="https://www.gestion.kagencia.com/" target="_BLANK"><i class="fas fa-eye"></i></a>
+        </p>
+      </div>
+    </div>
+
   </div>
 </div>
