actualizacion de portafolio

--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -106,6 +106,24 @@
     </div>
     <div class="project">
       <div class="project-info">
+        <img src="../assets/img/Chat.png" alt="Chat simulación clase" />
+        <h2 class="titulo-h2">Chat simulación clase en vivo</h2>
+        <p>
+          Chat en vivo totalmente programado con NodeJS y Socket Io que permite la simulación de una clase en vivo. Este
+          pequeño proyecto se base en el como aprender y como funcionan los sockets.
+        </p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: NodeJs, MongoDb, React</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a href="https://github.com/Se1juro/convertExceltoCsv" target="_BLANK"><i class="fab fa-github"></i></a>
+        </p>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project-info">
         <img src="../assets/img/GestionApp.png" alt="Gestion App - K Agencia" />
         <h2 class="titulo-h2">Gestion de proyectos y actividades</h2>
         <p>
@@ -122,6 +140,8 @@
         </p>
       </div>
     </div>
+
+
 
   </div>
 </div>
