Nuevos proyectos añadidos al portafolio

--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -118,7 +118,7 @@
       </div>
       <div class="project-capa">
         <p>
-          <a href="https://github.com/Se1juro/convertExceltoCsv" target="_BLANK"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Se1juro/chat-react-node" target="_BLANK"><i class="fab fa-github"></i></a>
         </p>
       </div>
     </div>
@@ -137,6 +137,44 @@
       <div class="project-capa">
         <p>
           <a href="https://www.gestion.kagencia.com/" target="_BLANK"><i class="fas fa-eye"></i></a>
+        </p>
+      </div>
+    </div>
+
+    <div class="project">
+      <div class="project-info">
+        <img src="../assets/img/GestionApp.png" alt="Gestion App - K Agencia" />
+        <h2 class="titulo-h2">Blog - PHP7</h2>
+        <p>
+          Pequeño blog desarrollado en PHP 7. Permite crear entradas, categorias, gestionarlas.
+          Cuenta con sistema de autenticación.
+        </p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: Php 7, MySQL, Javascript, Css</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a href="https://github.com/Se1juro/basic-blog-php" target="_BLANK"><i class="fab fa-github"></i></a>
+        </p>
+      </div>
+    </div>
+
+    <div class="project">
+      <div class="project-info">
+        <img src="../assets/img/GestionApp.png" alt="Gestion App - K Agencia" />
+        <h2 class="titulo-h2">ECommerce - PHP7</h2>
+        <p>
+          Ecommerce desarrollado en PHP 7. Sistema de carrito de compras, autenticacion, pedidos, gestion de productos y
+          categorias.
+        </p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: Php 7, MySQL, Javascript, Css. Implementa MVC y POO</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a href="https://github.com/Se1juro/little-ecommerce" target="_BLANK"><i class="fab fa-github"></i></a>
         </p>
       </div>
     </div>
