refactor: eliminados algunas frases y proyectos innecesarios

--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -1,5 +1,8 @@
 <div class="container-portfolio animate__animated animate__backInDown">
   <h1 class="titulo-h1">Portafolio</h1>
+  <p>En mi Github puedes encontrar muchos más proyectos. <a href="https://github.com/Se1juro?tab=repositories"
+      target="__blank" style="color: white;">Click
+      Aquí</a></h2>
   <div class="wrapper">
     <div class="project">
       <div class="project-info">
@@ -36,21 +39,6 @@
         <p>
           <a href="https://github.com/Se1juro/microaliadosalqueria" target="_BLANK"><i class="fab fa-github"></i></a>
           <a href="https://microaliados.herokuapp.com/" target="_BLANK"><i class="fas fa-eye"></i></a>
-        </p>
-      </div>
-    </div>
-    <div class="project">
-      <div class="project-info">
-        <img src="../assets/img/bmsoftware.png" alt="Geeky Shop - tienda virtual" />
-        <h2 class="titulo-h2">BM Software Landing Page</h2>
-        <p>Landing page para la empresa en la que laboro</p>
-      </div>
-      <div class="project-footer">
-        <p>Tecnología: Primefaces</p>
-      </div>
-      <div class="project-capa">
-        <p>
-          <a href="https://bmsoftware.co/" target="_BLANK"><i class="fas fa-eye"></i></a>
         </p>
       </div>
     </div>
@@ -143,7 +131,7 @@
 
     <div class="project">
       <div class="project-info">
-        <img src="../assets/img/GestionApp.png" alt="Gestion App - K Agencia" />
+        <img src="../assets/img/blog_php.png" alt="Gestion App - K Agencia" />
         <h2 class="titulo-h2">Blog - PHP7</h2>
         <p>
           Pequeño blog desarrollado en PHP 7. Permite crear entradas, categorias, gestionarlas.
@@ -162,7 +150,7 @@
 
     <div class="project">
       <div class="project-info">
-        <img src="../assets/img/GestionApp.png" alt="Gestion App - K Agencia" />
+        <img src="../assets/img/ecommerce-php.png" alt="Gestion App - K Agencia" />
         <h2 class="titulo-h2">ECommerce - PHP7</h2>
         <p>
           Ecommerce desarrollado en PHP 7. Sistema de carrito de compras, autenticacion, pedidos, gestion de productos y
@@ -179,7 +167,43 @@
       </div>
     </div>
 
+    <div class="project">
+      <div class="project-info">
+        <img src="../assets/img/404.png" alt="Error 404 - Html y CSS" />
+        <h2 class="titulo-h2">404 Not Found - Página 404</h2>
+        <p>
+          Página web que muestra una interfaz amigable al momento de recibir un error 404.
+        </p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: HTML Y CSS</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a href="https://github.com/Se1juro/404NotFound" target="_BLANK"><i class="fab fa-github"></i></a>
+          <a href="https://se1juro.github.io/404NotFound/" target="_BLANK"><i class="fas fa-eye"></i></a>
+        </p>
+      </div>
+    </div>
 
+    <div class="project">
+      <div class="project-info">
+        <img src="../assets/img/agenda.jpg" alt="Agenda de citas medicas remotas" />
+        <h2 class="titulo-h2">Agenda para citas medicas remotas</h2>
+        <p>
+          Aplicación web que permite agendar una cita para una visita remota, ubicada en el més de agosto.
+          La aplicación permite hasta un maximo de 3 visitas por citas.
+        </p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: MERN (ReactJS, NodeJS, Express, MongoDB)</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a href="https://github.com/Se1juro/AgendaCitas" target="_BLANK"><i class="fab fa-github"></i></a>
+        </p>
+      </div>
+    </div>
 
   </div>
 </div>
